--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
       uses: crazy-max/ghaction-upx@v3
       with:
         install-only: true
-    - run: make compress
+    - run: make compress-linux
     - uses: actions/upload-artifact@v3
       with:
         name: binaries
